<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sholehhermawan.mobproasssessment.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/text2"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="30dp"
        android:padding="3dp"/>
    <LinearLayout
        android:layout_below="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorFontText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginEmail"
        android:layout_below="@+id/text2"
        android:layout_marginTop="32dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginPassword"
        android:layout_below="@+id/loginEmail"
        android:layout_alignRight="@+id/loginEmail"
        android:layout_alignEnd="@+id/loginEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/login"
        android:id="@+id/loginLogin"
        android:layout_below="@+id/loginPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="16dp"

        android:text="@string/daftar_user"
        android:id="@+id/loginRegister"
        android:gravity="right"
        android:layout_below="@+id/loginPassword"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
