<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sholehhermawan.mobproasssessment.AplikasiActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/sholeh"
            android:minHeight="@dimen/list_item_height"
            android:minWidth="@dimen/list_item_height"
            android:scaleType="centerCrop"
            android:background="@color/colorFootBackground"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/list_item_height"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="16dp"
                    android:textColor="#000000"
                    android:text="@string/pengembang1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#000000"
                    android:text="@string/detail_pengembang1"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/miftah"
            android:minHeight="@dimen/list_item_height"
            android:minWidth="@dimen/list_item_height"
            android:scaleType="centerCrop"
            android:background="@color/colorFootBackground"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/list_item_height"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="16dp"
                    android:textColor="#000000"
                    android:text="@string/pengembang2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#000000"
                    android:text="@string/detail_pengembang2"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/winda"
            android:minHeight="@dimen/list_item_height"
            android:minWidth="@dimen/list_item_height"
            android:scaleType="centerCrop"
            android:background="@color/colorFootBackground"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/list_item_height"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="16dp"
                    android:textColor="#000000"
                    android:text="@string/pengembang3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#000000"
                    android:text="@string/detail_pengembang3"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
